tests/specs/interface_declaration.txt
# mod.ts
export interface Interface {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export interface Interface {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

interface Interface



# output.json
{
  "imports": [],
  "symbols": [
    {
      "name": "Interface",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "interface",
          "def": {
            "extends": [],
            "constructors": [],
            "methods": [],
            "properties": [],
            "callSignatures": [],
            "indexSignatures": [],
            "typeParams": []
          }
        }
      ]
    }
  ]
}
